Thu Sep 26 16:24:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* insns.def (opt_regexpmatch1): check Regexp#=~ is not defined before
	  calling rb_reg_match()

	* test/ruby/test_regexp.rb: add test

	* vm.c (ruby_vm_redefined_flag): change type to short[]

	* vm.c (vm_redefinition_check_flag): return REGEXP_REDEFINED_OP_FLAG if
	  klass == rb_cRegexp

	* vm.c (vm_init_redefined_flag): setup BOP flag for Regexp#=~

	* vm_insnhelper.h: add REGEXP_REDEFINED_OP_FLAG

	[ruby-core:57385] [Bug #8953]

Thu Sep 26 14:46:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (mark_locations_array): disable AddressSanitizer.  based on a
	  patch by halfie (Ruby Guy) at [ruby-core:57372].
	  [ruby-core:56155] [Bug #8680]

Wed Sep 25 17:41:29 2013  Koichi Sasada  <ko1@atdot.net>

	* README.EXT, README.EXT.ja: remove description of RARRAY_PTR()
	  and add a caution of accessing internal data structure directly.
	  Also add a description of rb_ary_store().
	  [Bug #8399]

Wed Sep 25 17:12:08 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: rename RARRAY_RAWPTR() to RARRAY_CONST_PTR().
	  RARRAY_RAWPTR(ary) returns (const VALUE *) type pointer and
	  usecase of this macro is not acquire raw pointer, but acquire
	  read-only pointer. So we rename to better name.
	  RSTRUCT_RAWPTR() is also renamed to RSTRUCT_CONST_PTR()
	  (I expect that nobody use it).

	* array.c, compile.c, cont.c, enumerator.c, gc.c, proc.c, random.c, 
	  string.c, struct.c, thread.c, vm_eval.c, vm_insnhelper.c:
	  catch up this change.

Wed Sep 25 16:58:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (rb_float_value, rb_float_new): move inline functions
	  from ruby/ruby.h.

	* numeric.c (rb_float_value, rb_float_new): define external functions
	  for extension libraries.

Wed Sep 25 15:37:02 2013  Koichi Sasada  <ko1@atdot.net>

	* test/rdoc/test_rdoc_generator_darkfish.rb: add a guard for windows.

Wed Sep 25 09:53:11 2013  Eric Hodel  <drbrain@segment7.net>
